# DSTC9-Dialog-Evaluation-Challenge

./: .gitignore  README.md  SVM_Tagger.ipynb  bigram_swbd_das.py  configuration_gpt2_adapter.py  create_topical_chat_submission_dataset.py  data.py  dataset_analysis.py  dataset_base.py  dataset_base_demo.py  dstc9_anno.py  eval_metrics.py  eval_qualitative.py  eval_qualitative_responses.py  generate_pplm_submission.py  generate_segmentations.py  generate_submission.py  get_swbd_tags.ipynb  gpt2.py  knowledge_index.py  metrics.py  modeling_gpt2_adapter.py  my-requirements.txt  my_train.py  pyproject.toml  requirements.txt  server.py  straggler-info.txt  tc_anno_analysis.py  tc_annotation.py  tc_dataset.py  tc_knowledge_selection.py  train_athena_tagger.py  train_model.py  train_swbd_tagger.py  trainer.py  utils.py  valid_freq_facts_bert.txt  valid_freq_facts_bert_2.txt
.dvc/: config
DialogueAct-Tagger/: processed_output_augmentation.py
annotators/: flair.py  ontology_classes.json  spotlight.py  vader.py
baseline/: dynamic.py  model.py
da_predictor_data/: da_baseline_util.py
data/: intermediate.dvc  processed.dvc
datasets/: athena.py
elastic/: elastic_retriever.py  topical_chats.py
evaluation/: eval_metrics.py  eval_qualitative_da.py  tc_anno_analysis.py
glove/: glove_utils.py
knowledge_selection/: Download_Glove.sh  selection_analysis.py  tc_knowledge_selection.py
model/: gpt2.py
notebooks/: 1.0-rr-conversation-parquet-data-analysis.ipynb  1.1-reading-set-parquet-analysis.ipynb  1.1-rr-annotation-inspection.ipynb  2.0-rr-annotation-inspection.ipynb  (+3 more)
(+53 files in other folders)
