[tool.poetry]
name = "dstc9-dialog-evaluation"
version = "0.1.0"
description = ""
authors = ["Rishi Rajasekaran <rajasekaran.rishi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
torchvision = "^0.10.0"
transformers = "^4.8.1"
pandas = "^1.2.5"
scikit-learn = "^0.24.2"
dvc = {extras = ["gdrive"], version = "^2.4.1"}
fastparquet = "^0.6.3"
jupyter = "^1.0.0"
matplotlib = "^3.4.2"
fasttext = "^0.9.2"
dill = "^0.3.4"
torchtext = "0.3.1"
nltk = "^3.6.2"
sentence-transformers = "^2.0.0"
pytorch-crf = "^0.7.2"
seaborn = "^0.11.1"
swifter = "^1.0.9"
spacy = "^3.1.1"
tensorboard = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
